# ipcchat

src/: CMakeLists.txt  Client  Server
src/client/: client_manager.cpp  client_manager.h  main.cpp
src/server/: main.cpp  server_manager.cpp  server_manager.h  socket_listener.cpp  socket_listener.h  user.h
src/utils/: protocol.cpp  protocol.h  tcpsocket.cpp  tcpsocket.h
